# app/handler/author_handler.go
@@ -3,11 +3,15 @@ package handler
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
+	"go-blog-fiber/app/model"
 	"go-blog-fiber/app/service"
+	"log"
+	"time"
 )
 
 func NewAuthorHandler(app fiber.Router, authorSrv service.IAuthorService) {
 	app.Get("/author/:id", GetAuthor(authorSrv))
+	app.Post("/author", CreateAuthor(authorSrv))
 }
 
 // GetAuthor func gets author by given ID or 404 error.
@@ -30,13 +34,58 @@ func GetAuthor(authorService service.IAuthorService) fiber.Handler {
 			})
 		}
 
-		book, err := authorService.FindOneAuthor(id)
+		author, err := authorService.FindOneAuthor(id)
 		if err != nil {
 			// Return, if book not found.
 			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
 				"error": true,
-				"msg":   "book with the given ID is not found",
+				"msg":   "author with the given ID is not found",
 				"book":  nil,
+			})
+		}
+
+		// Return status 200 OK.
+		return c.JSON(fiber.Map{
+			"error":  false,
+			"msg":    nil,
+			"author": author,
+		})
+	}
+}
+
+// CreateAuthor func gets author by given ID or 404 error.
+// @Description Create author by given Body.
+// @Summary get author by given ID
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Param author body model.Author true "Author"
+// @Success 200 {object} model.Author
+// @Router /v1/author [post]
+func CreateAuthor(authorService service.IAuthorService) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		// Catch book ID from URL.
+		body := &model.Author{}
+
+		if err := c.BodyParser(body); err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"error":  true,
+				"lalala": true,
+				"msg":    err.Error(),
+			})
+		}
+
+		body.CreatedAt = time.Now()
+		body.UpdatedAt = time.Now()
+
+		log.Println(body.FullName)
+
+		err := authorService.CreateAuthor(body)
+		if err != nil {
+			// Return, if book not found.
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   "error when inputting author",
 			})
 		}
 
@@ -44,7 +93,6 @@ func GetAuthor(authorService service.IAuthorService) fiber.Handler {
 		return c.JSON(fiber.Map{
 			"error": false,
 			"msg":   nil,
-			"book":  book,
 		})
 	}
 }
